--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,65 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.app-doto{
+  background-color: #f1eded;
+  position: absolute;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.app-name {
+    margin: 18px;
+    font-size: 24px;
+    color: #32cd32;
+    padding-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.create-task {
+    width: 460px;
+    height: 70px;
+    background-color: #b2dfd8;
+    border-radius: 4px;
+    margin: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-title {
+    width: 290px;
+    height: 30px;
+    border-radius: 3px;
+    border: 1px solid #000000;
+    margin: 18px;
+}
+
+.accept {
+    width: 110px;
+    height: 30px;
+    background-color: #004d40;
+    border-radius: 4px;
+    border: 1px solid #004d40;
+    font-size: 22px;
+    color: #f1eded;
+}
+
+.tasks{
+  width: 460px;
+  height: 70px;
+  margin: 15px;
+  background-color: #dcedc8;
+  border-radius: 4px;
+  border: 1px solid #dcedc8;
+}
+
+ .title {
+    font-size: 20px;
+    margin: 10px;
+}
+
+.new-task{
+  display: inline-block;
+  float: right;
+  width: 80px;
+  height: 20px;
+  border-radius: 4px;
+  text-align: center;
+  margin-right: 15px;
+  margin-top: -5px;
+  color: #ffffff;
+  font-size: 18px;
+
 }
